fixing some fonts on mobile

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -17,8 +17,8 @@ body {
   font-weight: 600;
 }
 #subtitle {
-  line-height: 28px;
-  font-size: 20px;
+  line-height: 24px;
+  font-size: 16px;
   font-weight: 200;
   letter-spacing: 0.2px;
 }
